...
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WXZ-6d-39g">
                                        <rect key="frame" x="210.33333333333331" y="314.99999999999994" width="96" height="34.333333333333314"/>
                                        <state key="normal" title="Button"/>
                                        <buttonConfiguration key="configuration" style="plain" title="More info"/>
                                        <connections>
                                            <action selector="moreInfoPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Rtc-2s-Mk1"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <color key="backgroundColor" systemColor="systemGray6Color"/>
...
                            <constraint firstItem="los-42-RPq" firstAttribute="width" secondItem="6Tk-OE-BBY" secondAttribute="width" multiplier="0.8" id="fYp-Da-7jX"/>
                            <constraint firstItem="Lrg-Xc-Egp" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="flb-de-p0c"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="7SX-mc-fq3" secondAttribute="bottom" id="jBU-xR-C0g"/>
                            <constraint firstAttribute="trailing" secondItem="Lrg-Xc-Egp" secondAttribute="trailing" id="pm7-mv-naP"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="PokeApi" id="l8u-Ft-HJB">
                        <barButtonItem key="leftBarButtonItem" image="info.circle" catalog="system" id="qsU-hH-JBL">
                            <connections>
                                <action selector="aboutTheAutorPressed:" destination="BYZ-38-t0r" id="KH1-KR-KWg"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" image="magnifyingglass" catalog="system" id="qyw-L3-rJc">
...
