...
            shownTag = K.all
            initiated = false
            updateTableView()
            return
        }
        
        let alertBox = UIAlertController (title: "Search", message: "Search Pokemon by type or name", preferredStyle: .alert)
        
        alertBox.addTextField { field in
            field.placeholder = "Search..."
            field.returnKeyType = .continue
        }
        
...
